--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background-color: white;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
